# internal/api/actions.go
@@ -26,86 +26,90 @@ var publicOps = map[string]bool{
 // opActions maps every authenticated operation to the Action a principal needs
 // for it. resourceKindFor names the object the Action is checked against.
 var opActions = map[string]host.Action{
-	"CancelCampaign":            host.ActionCampaignSend,
-	"CreateBounceMailbox":       host.ActionSenderWrite,
-	"CreateCampaign":            host.ActionCampaignWrite,
-	"CreateLayout":              host.ActionTemplateWrite,
-	"CreateProbeMailbox":        host.ActionSenderWrite,
-	"CreateSender":              host.ActionSenderWrite,
-	"CreateSendingDomain":       host.ActionSenderWrite,
-	"CreateTemplate":            host.ActionTemplateWrite,
-	"CreateTransport":           host.ActionSenderWrite,
-	"DeleteBounceMailbox":       host.ActionSenderWrite,
-	"DeleteCampaign":            host.ActionCampaignWrite,
-	"DeleteLayout":              host.ActionTemplateWrite,
-	"DeleteProbeMailbox":        host.ActionSenderWrite,
-	"DeleteSender":              host.ActionSenderWrite,
-	"DeleteSendingDomain":       host.ActionSenderWrite,
-	"DeleteSuppression":         host.ActionSuppressionWrite,
-	"DeleteTemplate":            host.ActionTemplateWrite,
-	"DeleteTransport":           host.ActionSenderWrite,
-	"GetBounce":                 host.ActionDeliveryRead,
-	"GetBounceMailbox":          host.ActionSenderRead,
-	"GetCampaign":               host.ActionCampaignRead,
-	"GetDelivery":               host.ActionDeliveryRead,
-	"GetEvent":                  host.ActionEventRead,
-	"GetLayout":                 host.ActionTemplateRead,
-	"GetMessageVersion":         host.ActionTemplateRead,
-	"GetProbeMailbox":           host.ActionSenderRead,
-	"GetProbeRun":               host.ActionSenderRead,
-	"GetSender":                 host.ActionSenderRead,
-	"GetSenderHealth":           host.ActionSenderRead,
-	"GetSendingDomain":          host.ActionSenderRead,
-	"GetSuppression":            host.ActionSuppressionRead,
-	"GetTemplate":               host.ActionTemplateRead,
-	"GetTemplateI18n":           host.ActionTemplateRead,
-	"GetTenantSettings":         host.ActionSettingsRead,
-	"GetTransport":              host.ActionSenderRead,
-	"GetTransportHealth":        host.ActionSenderRead,
-	"IngestCampaignRecipients":  host.ActionCampaignWrite,
-	"ListBounces":               host.ActionDeliveryRead,
-	"ListBounceMailboxes":       host.ActionSenderRead,
-	"ListCampaignDeliveries":    host.ActionDeliveryRead,
-	"ListCampaignLinks":         host.ActionCampaignRead,
-	"ListCampaigns":             host.ActionCampaignRead,
-	"ListDeadLetterEvents":      host.ActionEventRead,
-	"ListDeliveries":            host.ActionDeliveryRead,
-	"ListDeliveryAttempts":      host.ActionDeliveryRead,
-	"ListDeliveryBounces":       host.ActionDeliveryRead,
-	"ListEvents":                host.ActionEventRead,
-	"ListLayouts":               host.ActionTemplateRead,
-	"ListMessageVersions":       host.ActionTemplateRead,
-	"ListProbeMailboxes":        host.ActionSenderRead,
-	"ListProbeRuns":             host.ActionSenderRead,
-	"ListSenders":               host.ActionSenderRead,
-	"ListSendingDomains":        host.ActionSenderRead,
-	"ListSuppressions":          host.ActionSuppressionRead,
-	"ListTemplateI18nKeys":      host.ActionTemplateRead,
-	"ListTemplates":             host.ActionTemplateRead,
-	"ListTransports":            host.ActionSenderRead,
-	"NotifyCampaignUnsubscribe": host.ActionCampaignWrite,
-	"NotifyDeliveryUnsubscribe": host.ActionDeliveryWrite,
-	"PauseCampaign":             host.ActionCampaignSend,
-	"PreviewTemplate":           host.ActionTemplateRead,
-	"PublishTemplate":           host.ActionTemplateWrite,
-	"ReplaceTemplateI18n":       host.ActionTemplateWrite,
-	"ReplayEvent":               host.ActionEventWrite,
-	"ResumeCampaign":            host.ActionCampaignSend,
-	"RetryCampaignDeliveries":   host.ActionCampaignSend,
-	"RetryDelivery":             host.ActionDeliveryWrite,
-	"SendMessage":               host.ActionMessageSend,
-	"StartCampaign":             host.ActionCampaignSend,
-	"TriggerProbeRun":           host.ActionSenderWrite,
-	"UpdateBounceMailbox":       host.ActionSenderWrite,
-	"UpdateCampaign":            host.ActionCampaignWrite,
-	"UpdateLayout":              host.ActionTemplateWrite,
-	"UpdateProbeMailbox":        host.ActionSenderWrite,
-	"UpdateSender":              host.ActionSenderWrite,
-	"UpdateSendingDomain":       host.ActionSenderWrite,
-	"UpdateTemplate":            host.ActionTemplateWrite,
-	"UpdateTenantSettings":      host.ActionSettingsWrite,
-	"UpdateTransport":           host.ActionSenderWrite,
-	"UpsertSuppression":         host.ActionSuppressionWrite,
+	"CancelCampaign":               host.ActionCampaignSend,
+	"CreateBounceMailbox":          host.ActionSenderWrite,
+	"CreateCampaign":               host.ActionCampaignWrite,
+	"CreateLayout":                 host.ActionTemplateWrite,
+	"CreateProbeMailbox":           host.ActionSenderWrite,
+	"CreateSender":                 host.ActionSenderWrite,
+	"CreateSendingDomain":          host.ActionSenderWrite,
+	"CreateTemplate":               host.ActionTemplateWrite,
+	"CreateTransport":              host.ActionSenderWrite,
+	"DeleteBounceMailbox":          host.ActionSenderWrite,
+	"DeleteCampaign":               host.ActionCampaignWrite,
+	"DeleteLayout":                 host.ActionTemplateWrite,
+	"DeleteProbeMailbox":           host.ActionSenderWrite,
+	"DeleteSender":                 host.ActionSenderWrite,
+	"DeleteSendingDomain":          host.ActionSenderWrite,
+	"DeleteSuppression":            host.ActionSuppressionWrite,
+	"DeleteTemplate":               host.ActionTemplateWrite,
+	"DeleteTransport":              host.ActionSenderWrite,
+	"GetBounce":                    host.ActionDeliveryRead,
+	"GetBounceMailbox":             host.ActionSenderRead,
+	"GetCampaign":                  host.ActionCampaignRead,
+	"GetDelivery":                  host.ActionDeliveryRead,
+	"GetEvent":                     host.ActionEventRead,
+	"GetLayout":                    host.ActionTemplateRead,
+	"GetMessageVersion":            host.ActionTemplateRead,
+	"GetProbeMailbox":              host.ActionSenderRead,
+	"GetProbeRun":                  host.ActionSenderRead,
+	"GetSender":                    host.ActionSenderRead,
+	"GetSenderHealth":              host.ActionSenderRead,
+	"GetSendingDomain":             host.ActionSenderRead,
+	"GetSuppression":               host.ActionSuppressionRead,
+	"GetTemplate":                  host.ActionTemplateRead,
+	"GetTemplateI18n":              host.ActionTemplateRead,
+	"GetTenantSettings":            host.ActionSettingsRead,
+	"GetTransport":                 host.ActionSenderRead,
+	"GetTransportHealth":           host.ActionSenderRead,
+	"IngestCampaignRecipients":     host.ActionCampaignWrite,
+	"ListBounces":                  host.ActionDeliveryRead,
+	"ListBounceMailboxes":          host.ActionSenderRead,
+	"ListCampaignDeliveries":       host.ActionDeliveryRead,
+	"ListCampaignLinks":            host.ActionCampaignRead,
+	"ListCampaigns":                host.ActionCampaignRead,
+	"ListDeadLetterEvents":         host.ActionEventRead,
+	"ListDeliveries":               host.ActionDeliveryRead,
+	"ListDeliveryAttempts":         host.ActionDeliveryRead,
+	"ListDeliveryBounces":          host.ActionDeliveryRead,
+	"ListEvents":                   host.ActionEventRead,
+	"ListLayouts":                  host.ActionTemplateRead,
+	"ListMessageVersions":          host.ActionTemplateRead,
+	"ListProbeMailboxes":           host.ActionSenderRead,
+	"ListProbeRuns":                host.ActionSenderRead,
+	"ListSenders":                  host.ActionSenderRead,
+	"ListSendingDomains":           host.ActionSenderRead,
+	"ListSuppressions":             host.ActionSuppressionRead,
+	"ListTemplateI18nKeys":         host.ActionTemplateRead,
+	"ListTemplates":                host.ActionTemplateRead,
+	"ListTransports":               host.ActionSenderRead,
+	"NotifyCampaignUnsubscribe":    host.ActionCampaignWrite,
+	"NotifyDeliveryUnsubscribe":    host.ActionDeliveryWrite,
+	"PauseCampaign":                host.ActionCampaignSend,
+	"PreviewTemplate":              host.ActionTemplateRead,
+	"PublishTemplate":              host.ActionTemplateWrite,
+	"ReplaceTemplateI18n":          host.ActionTemplateWrite,
+	"ReplayEvent":                  host.ActionEventWrite,
+	"ResumeCampaign":               host.ActionCampaignSend,
+	"RetryCampaignDeliveries":      host.ActionCampaignSend,
+	"RetryDelivery":                host.ActionDeliveryWrite,
+	"SendMessage":                  host.ActionMessageSend,
+	"StartCampaign":                host.ActionCampaignSend,
+	"TestBounceMailbox":            host.ActionSenderWrite,
+	"TestBounceMailboxCredentials": host.ActionSenderWrite,
+	"TestProbeMailbox":             host.ActionSenderWrite,
+	"TestProbeMailboxCredentials":  host.ActionSenderWrite,
+	"TriggerProbeRun":              host.ActionSenderWrite,
+	"UpdateBounceMailbox":          host.ActionSenderWrite,
+	"UpdateCampaign":               host.ActionCampaignWrite,
+	"UpdateLayout":                 host.ActionTemplateWrite,
+	"UpdateProbeMailbox":           host.ActionSenderWrite,
+	"UpdateSender":                 host.ActionSenderWrite,
+	"UpdateSendingDomain":          host.ActionSenderWrite,
+	"UpdateTemplate":               host.ActionTemplateWrite,
+	"UpdateTenantSettings":         host.ActionSettingsWrite,
+	"UpdateTransport":              host.ActionSenderWrite,
+	"UpsertSuppression":            host.ActionSuppressionWrite,
 }
 
 // resourceKindFor is the Resource.Kind an Authorizer sees, derived from the
